--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
             onchange="buttonColorChange(this)"
           >
             <option value="random">Random</option>
+            <option value="blue">Blue</option>
             <option value="red">Red</option>
+            <option value="yellow">Yellow</option>
             <option value="green">Green</option>
             <option value="reset">Reset</option>
           </select>
