--- a/index.html
+++ b/index.html
@@ -100,6 +100,50 @@
       </div>
     </div>
 
+    <div class="container-5">
+      <h2>Challenge 5: BlackJack</h2>
+      <h3><span id="blackjack-result">Good Luck & Have Fun!</span></h3>
+
+      <div class="flex-blackjack-row-1">
+        <div id="player-box">
+          <h2>You: <span id="player-blackjack-result">0</span></h2>
+        </div>
+
+        <div>
+          <h2>Dealer: <span id="dealer-blackjack-result">0</span></h2>
+        </div>
+      </div>
+
+      <div class="flex-blackjack-row-2">
+        <div>
+          <button class="btn-lg btn-primary mr-2" id="blackjack-hit-button">
+            Hit
+          </button>
+          <button class="btn-lg btn-warning mr-2" id="blackjack-stand-button">
+            Stand
+          </button>
+          <button class="btn-lg btn-danger" id="blackjack-deal-button">
+            Deal
+          </button>
+        </div>
+      </div>
+
+      <div class="flex-blackjack-row-3">
+        <table>
+          <tr>
+            <th>Wins</th>
+            <th>Losses</th>
+            <th>Draws</th>
+          </tr>
+          <tr>
+            <td><span id="wins">0</span></td>
+            <td><span id="losses">0</span></td>
+            <td><span id="draws">0</span></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+
     <script src="static/js/script.js"></script>
   </body>
 </html>
