compute winner logic works

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="static/css/style.css" />
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <title>JS on Steroids</title>
   </head>
 
@@ -109,7 +110,7 @@
           <h2>You: <span id="player-blackjack-result">0</span></h2>
         </div>
 
-        <div>
+        <div id="dealer-box">
           <h2>Dealer: <span id="dealer-blackjack-result">0</span></h2>
         </div>
       </div>
